--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "quickad",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://github.com/tranngoctien47/ido",
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
@@ -19,6 +20,7 @@
         "aos": "^2.3.4",
         "axios": "^0.24.0",
         "blob-util": "^2.0.2",
+        "gh-pages": "^3.2.3",
         "node": "^17.2.0",
         "node-sass": "^7.0.0",
         "parallax-controller": "^1.3.5",
@@ -50,7 +52,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
